--- a/views/index.hbs
+++ b/views/index.hbs
@@ -227,7 +227,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body"  >
-                <p>Bem vindo visitante, faça login e liberar muitos outros jogos!</p>
+                <p>Bem vindo visitante, faça login e libere muitos outros jogos!</p>
             </div>
         </div>
     </div>
